<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2013 Daniel Velazco

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <!-- App name -->
    <string name="app_name">Tinfoil for Facebook</string>
    <string name="app_name_short">Tinfoil</string>

    <!-- Labels -->
    <string name="lbl_dialog_alert">Alert</string>
    <string name="lbl_dialog_close">Close</string>
    <string name="lbl_dialog_ok">OK</string>
    <string name="loading_video">Loading video&#8230;</string>
    <string name="upload_file_choose">Choose file</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_save_image">Save image</string>

    <!-- Sharing -->
    <string name="share_action">Share current page</string>
    <string name="share_action_subject">Facebook page</string>

    <!-- Context menu items -->
    <string name="menu_desktop">Desktop</string>
    <string name="menu_mobile">Mobile</string>
    <string name="menu_jump_top">Jump to top</string>
    <string name="menu_news_feed">News feed</string>
    <string name="menu_share">Share</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Kill</string>

    <!-- Preferences -->
    <string name="pref_cat_access">Facebook access</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_proxy">Proxy</string>
    <string name="prefs_allow_checkins">Allow Check-ins</string>
    <string name="prefs_allow_checkins_sry">Allows the mobile app to use coarse location in order to check-in to places</string>
    <string name="prefs_open_links_inside">Open links inside app</string>
    <string name="prefs_open_links_inside_sry">Any links being opened from the mobile app will open from within the app instead of the browser</string>
    <string name="prefs_block_images">Block images</string>
    <string name="prefs_block_images_sry">Save time and bandwidth by blocking all images loaded via the network.</string>
    <string name="pref_hide_ab">Auto-hide ActionBar</string>
    <string name="pref_hide_ab_sry">Automatically hide the ActionBar while scrolling down or not using. Scroll back up to make it appear again.</string>
    <string name="prefs_mobile_site">Mobile/Desktop site</string>
    <string name="prefs_mobile_site_sry">Force the use of the mobile or desktop site</string>
    <string name="prefs_enable_proxy">Enable proxy</string>
    <string name="prefs_enable_proxy_sry">Configure proxy for network requests.</string>
    <string name="prefs_proxy_host">Proxy host</string>
    <string name="prefs_proxy_port">Proxy port</string>

    <array name="prefs_mobile_site_list">
        <item>Auto</item>
        <item>Force mobile site</item>
        <item>Force desktop site</item>
        <item>Force basic site</item>
        <item>Facebook Zero</item>
        <item>Facebook.onion (requires Orbot)</item>
    </array>
    <array name="prefs_mobile_site_list_values">
        <item>auto</item>
        <item>mobile</item>
        <item>desktop</item>
        <item>basic</item>
        <item>zero</item>
        <item>onion</item>
    </array>

    <string name="pref_about">About</string>
    <string name="pref_about_sry">Written by Daniel Velazco. Click here for more information.</string>
    <!-- End preferences -->

    <string name="txt_save_image_success">Image downloaded and saved to download folder</string>
    <string name="txt_save_image_failed">Could not save image</string>

    <!-- Orbot related strings -->
    <string name="market_orbot">market://search?q=pname:org.torproject.android</string>
    <string name="start_orbot_">Start Orbot?</string>
    <string name="orbot_not_running_start_it_question">Orbot doesn\'t appear to be running. Would you like to start it up and connect to Tor?</string>

    <!-- Text used on the "about" dialog -->
    <string name="txt_checkins_disables">\nFacebook is trying to access your location.\n
\nMost likely you are trying to \"Check-in\" to a specific place. While Tinfoil has optional permissions used for this, it is disabled by default.\n
\nYou can enable this feature by going to the Preferences and checking the option that says \"Allow Check-ins.\"\n
\nTinfoil only shares \"Coarse location\", this doesn\'t use the GPS, only Network and Wi-fi location in order to save battery.\n
\n</string>

    <!-- Text used on the "about" dialog -->
    <string name="txt_about">\nDeveloped by Daniel Velazco.
\nvelazcod@gmail.com
\nhttp://www.danvelazco.com\n
\n
\nSource code:
\nhttps://github.com/velazcod/Tinfoil-Facebook\n
\n
\nThis app is for those users that require a Tinfoil Hat when logging in to Facebook. It creates a sandbox for facebook\'s mobile site. Requires INTERNET permissions, and if you are skeptic about it, feel free to check the source code listed above. Coarse location permissions are required but location is not used unless you turn \"Allow Check-ins\" in the preferences.\n
\n</string>
    <string name="other">Other</string>
</resources>
