<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2013 Daniel Velazco

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_drawer_right"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Title bar -->
        <RelativeLayout
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:background="@color/blue_primary">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:text="@string/app_name" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:background="@android:color/transparent"/>

        <!-- Menu item: Jump to top -->
        <RelativeLayout
            android:id="@+id/menu_item_jump_to_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_jump_to_top"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_upload_grey600_24dp"
                android:contentDescription="@string/menu_jump_top" />

            <TextView
                android:id="@+id/tv_jump_to_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/iv_jump_to_top"
                android:text="@string/menu_jump_top" />

        </RelativeLayout>

        <!-- Menu item: Refresh -->
        <RelativeLayout
            android:id="@+id/menu_item_refresh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_refresh_grey600_24dp"
                android:contentDescription="@string/menu_refresh" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_refresh"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:text="@string/menu_refresh" />

        </RelativeLayout>

        <!-- Menu item: News feed -->
        <RelativeLayout
            android:id="@+id/menu_item_newsfeed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_newsfeed"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_eye_grey600_24dp"
                android:contentDescription="@string/menu_news_feed" />

            <TextView
                android:id="@+id/tv_newsfeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_newsfeed"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_news_feed" />

        </RelativeLayout>

        <!-- Menu item: Notifications -->
        <RelativeLayout
            android:id="@+id/menu_items_notifications"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_notifications"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_information_grey600_24dp"
                android:contentDescription="@string/menu_notifications" />

            <TextView
                android:id="@+id/tv_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_notifications"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_notifications" />

        </RelativeLayout>

        <!-- Menu item: Messages -->
        <RelativeLayout
            android:id="@+id/menu_item_messages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_messages"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pencil_grey600_24dp"
                android:contentDescription="@string/menu_messages" />

            <TextView
                android:id="@+id/tv_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_messages"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_messages" />

        </RelativeLayout>

        <!-- Menu item: Share this page -->
        <RelativeLayout
            android:id="@+id/menu_share_this"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_share_this"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share_variant_grey600_24dp"
                android:contentDescription="@string/menu_refresh" />

            <TextView
                android:id="@+id/tv_share_this"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_share_this"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_share" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:text="@string/other"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="sans-serif-light"
            android:id="@+id/textView" />

        <!-- Menu item: Preferences -->
        <RelativeLayout
            android:id="@+id/menu_preferences"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_preferences"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_settings_grey600_24dp"
                android:contentDescription="@string/menu_refresh" />

            <TextView
                android:id="@+id/tv_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_preferences"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_preferences" />

        </RelativeLayout>

        <!-- Menu item: About -->
        <RelativeLayout
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_items_height"
            android:paddingTop="@dimen/navigation_drawer_items_padding"
            android:paddingLeft="@dimen/navigation_drawer_items_padding_left"
            android:paddingStart="@dimen/navigation_drawer_items_padding_left"
            android:paddingRight="@dimen/navigation_drawer_items_padding"
            android:paddingEnd="@dimen/navigation_drawer_items_padding"
            android:paddingBottom="@dimen/navigation_drawer_items_padding"
            android:padding="@dimen/navigation_drawer_items_padding"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:id="@+id/iv_about"
                android:layout_width="@dimen/navigation_drawer_icon_size"
                android:layout_height="@dimen/navigation_drawer_icon_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_help_circle_grey600_24dp"
                android:contentDescription="@string/menu_refresh" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_about"
                android:layout_marginLeft="@dimen/navigation_drawer_items_icon_title_margin"
                android:gravity="left"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_about" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
